# ChangeLog for app-xemacs/net-utils
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/net-utils/ChangeLog,v 1.30 2011/07/22 11:24:59 xarthisius Exp $

*net-utils-1.57 (16 Jul 2013)

  16 Jul 2013; Mats Lidell <matsl@gentoo.org> +metadata.xml,
  +net-utils-1.57.ebuild:
  Upstream experimental version bump and use EAPI=5
