@@ -1,1 +1,2 @@
 DIST net-utils-1.57-pkg.tar.gz 157193 SHA256 787bc43ad011469275c58307480913e69f9d1e6d2f0465bb39ae3bcf0125d2b6 SHA512 350a5026ae32ebc9c1b079977fde6de6ab786c4d169c2bc321c965b2ee46ce7fbbb2a3f6a0bc9f9e2fad3845218e7f69af1367eb283cf82fd27e66de88eef1bc WHIRLPOOL 819b6fd4259a1b630563d0b906737625c2a8fb34af3c6006cb9dd3832b6f66341257dc43c1013dfc20ae864cbcc9002fda92566762239d1f8533e6893305e892
+DIST net-utils-1.60-pkg.tar.gz 155321 SHA256 b375cf847e8262a522ca4a4616cdbc172598d12840dd9768b07b28fa0f7650fc SHA512 61253aa58edfa640e1f8e6795700a0f01bbbce064e2d213781eae577a2a07fc7c049538662c14e14a8ee005aa5543591e66b47eea4dbc9516161d6926312b08f WHIRLPOOL a89f02330da5580b79a040bacadf590a4a47830df4cf685c471fc9b8d856ac153b9e01aafca2a362e8562bdc671ab08c80b549e2113d2c974444474ee0012e45
