@@ -1,6 +1,11 @@
 # ChangeLog for app-xemacs/net-utils
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/net-utils/ChangeLog,v 1.30 2011/07/22 11:24:59 xarthisius Exp $
+
+*net-utils-1.60 (08 Jul 2014)
+
+  08 Jul 2014; Mats Lidell <matsl@gentoo.org> +net-utils-1.60.ebuild:
+  Pre release version bump.
 
 *net-utils-1.57 (16 Jul 2013)
 
